Fixed calendar size for iPhone 5, improved calendar alignment in general, made info items have outlines when focused and expanded description text fields to fit more text into the page.

--- a/app/pages/resource/_resource-page.scss
+++ b/app/pages/resource/_resource-page.scss
@@ -87,7 +87,6 @@ $content-padding: 10px;
     }
 
     &:hover, &:focus, &:active {
-      outline: none;
       background-color: $white;
     }
   }
